[package]
name = "io_uring_examples"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
byteorder = "1"
clap = { version = "4", features = ["derive"] }
libc = "0.2.139"
memmap = "0.7.0"
tempfile = "3.4.0"
tokio = {version = "1.26.0", features = ["full"] }
tokio-uring = "0.4.0"
rand = { version = "0.8", features = ["small_rng"] }
hdrhistogram = "7.5.2"
io-uring = "0.5.13"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "random_read_bench"
harness = false
